log
Thu, Mar 27, 2025  8:13:23 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  8:29:33 PM: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e253eb4
Thu, Mar 27, 2025  8:29:55 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d4116f3
Thu, Mar 27, 2025  8:37:04 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
abc2936
Thu, Mar 27, 2025  8:44:06 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
331129b
Thu, Mar 27, 2025  8:44:57 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
4529a30
Thu, Mar 27, 2025  8:46:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
fc4cb54
Thu, Mar 27, 2025  8:48:10 PM: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
cbe03ba
Thu, Mar 27, 2025  8:49:30 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
55c1073
Thu, Mar 27, 2025  8:51:52 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
0821858
Thu, Mar 27, 2025  8:52:30 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
10a9fe2
Thu, Mar 27, 2025  9:01:01 PM: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:84:36: error: 'return' with a value, in function returning void [-Werror]
     if (list->head == NULL) return NULL;
                                    ^~~~
list.c:69:6: note: declared here
 void pushFront(List * list, void * data)
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8e890aa
Thu, Mar 27, 2025  9:01:33 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
f796529
Thu, Mar 27, 2025  9:03:40 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
b99d902
Thu, Mar 27, 2025  9:10:10 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
6381e42
Thu, Mar 27, 2025  9:14:01 PM: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
07a0728
Thu, Mar 27, 2025  9:14:57 PM: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  10|2
total_score: 45/70
5e4329c
Thu, Mar 27, 2025  9:17:26 PM: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  11|1
total_score: 55/70
e3b7851
Thu, Mar 27, 2025  9:28:21 PM: 
 list.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c424e57
Thu, Mar 27, 2025  9:30:18 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:132:12: error: unused variable 'data' [-Werror=unused-variable]
     void * data = list->current->data;
            ^~~~
list.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c448f6a
Thu, Mar 27, 2025  9:30:30 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:133:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9a8ea3
Thu, Mar 27, 2025  9:32:55 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
086d4a3
Thu, Mar 27, 2025  9:36:46 PM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:136:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9b2bff0
